--- a/challenges/forensics/remote-multimedia-controller-75/src/Makefile
+++ b/challenges/forensics/remote-multimedia-controller-75/src/Makefile
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------
 # file:   Makefile
 # date:   2017-01-16
-# author: paul.dautry
+# author: koromodako
 # purpose:
 #       Makefile used to build exploit shellcodes and other binaries
 #-----------------------------------------------------------------------
