--- a/challenges/forensics/10-cl0v3rf13ld-lane-signal-75/src/Makefile
+++ b/challenges/forensics/10-cl0v3rf13ld-lane-signal-75/src/Makefile
@@ -1,7 +1,7 @@
 #----------------------------------------------------------------
 # file:    Makefile
 # date:    2016-02-05
-# author:  paul.dautry
+# author:  koromodako
 # purpose:
 #       This file is used call the script making the challenge
 #----------------------------------------------------------------
